# actixweb-sqlx-jwt

./: .dockerignore  .env  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  Dockerfile.rust  Makefile  build.rs  gotest.jl  mock.js  mod.js  readme.md  template.json  test.sh
assets/: ls  ls..txt  ls.txt
sql/: user.up.mysql.sql  user.up.postgres.sql  user.up.sqlite.sql
src/: api.rs  config.rs  how.rs  main.rs  state.rs
src/handlers/: mod.rs
src/handlers/users/: dao.rs  handlers.rs  mod.rs
src/middlewares/: auth.rs  catcher.rs  logger.rs  mod.rs
src/models/: user.rs
src/users/: dao.rs  mod.rs  routes.rs  user.rs
