[package]
name = "actixweb-sqlx-jwt"
version = "0.1.0"
authors = ["Wspsxing <biluohc@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
vergen = "3.1.0"

[features]
default = [ "mysql" ]
postgres = [ "sqlx/postgres"]
sqlite = [ "sqlx/sqlite"]
mysql = [ "sqlx/mysql"]

[dependencies.sqlx]
version = "0.3.5"
default-features = false
features = [ "runtime-tokio", "macros", "chrono", "bigdecimal", "uuid", "json" ]

[dependencies]
structopt = "0.3.16"
tokio = { version = "0.2.22", default-features = false, features = ["rt-core", "rt-util", "io-driver", "tcp", "uds", "udp", "time", "signal", "stream"] } # copy from actix-rt
nonblock-logger = { version = "0.1.5", default-features = false, features = ["color", "dbg"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono =  { version = "0.4.15", features = ["serde"] }
bigdecimal = { version = "0.1.2", features = ["serde"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_qs = "0.6.1"
serde_json = "1.0.57"
json5 = "0.2.8"
ring = "0.16.15"
bcrypt = "0.8.2"
hex = "0.4.2"
jsonwebtoken = "7.2.0"
mobc-redis = "0.5.3"
mobc = "0.5.12"
actix-web = "3.0.0"
actix-files = "0.3.0"
actix-rt = "1.1.1"
lazy_static = "1.4.0"
async-trait = "0.1.38"
futures = "0.3.5"
thiserror = "1.0.20"
anyhow = "1.0.32"
