[package]
name = "actixweb-sqlx-jwt"
version = "0.1.0"
authors = ["Wspsxing <biluohc@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://docs.rs/vergen/5.1.6/vergen/
[build-dependencies]
vergen = { version = "5.1", default-features = false, features = [ "git" ] }

[features]
default = [ "mysql" ]
postgres = [ "sqlx/postgres"]
sqlite = [ "sqlx/sqlite"]
mysql = [ "sqlx/mysql"]

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [ "runtime-tokio-rustls", "macros", "chrono", "decimal", "uuid", "json" ]
# git = "https://github.com/launchbadge/sqlx"
# path = "../sqlx"

[dependencies.salvo]
version = "0.12.2"
features = [ "full" ]
# git = "https://github.com/salvo-rs/salvo"
# path = "../salvo"


[dependencies]
clap = "3.0.0-beta.2"
tokio = { version = "1.11.0", features = [ "full" ] }
nonblock-logger = { version = "0.1.6", default-features = false, features = ["color", "dbg"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono =  { version = "0.4.15", features = ["serde"] }
rust_decimal = { version = "1.6.0", features = [ "serde-float" ] }
serde = { version = "1.0.115", features = ["derive"] }
serde_qs = "0.8.2"
serde_json = "1.0.57"
json5 = "0.4.0"
ring = "0.16.15"
bcrypt = "0.10.1"
hex = "0.4.2"
jsonwebtoken = "7.2.0"
mobc-redis = "0.7.0"
mobc = "0.7.0"
lazy_static = "1.4.0"
async-trait = "0.1.38"
futures = "0.3.5"
thiserror = "1.0.20"
anyhow = "1.0.32"
url = "2.1.1"
