[package]
name = "actixweb-sqlx-jwt"
version = "0.1.0"
authors = ["Wspsxing <biluohc@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://docs.rs/vergen/4.1.0/vergen/
[build-dependencies]
vergen = { version = "=4.1.0", features = [ "git" ] }

[features]
default = [ "postgres" ]
postgres = [ "sqlx/postgres"]
sqlite = [ "sqlx/sqlite"]
mysql = [ "sqlx/mysql"]

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [ "runtime-actix-rustls", "macros", "chrono", "decimal", "uuid", "json" ]
# git = "https://github.com/launchbadge/sqlx"
# path = "../sqlx"

[dependencies]
clap =  { version = "3.0", features = [ "derive" ] }
tokio = { version = "1.15.0", features = ["rt", "net", "parking_lot", "signal", "sync", "time"] } # copy from actix-rt
nonblock-logger = { version = "0.1.6", default-features = false, features = ["color", "dbg"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono =  { version = "0.4.19", features = ["serde"] }
rust_decimal = { version = "1.10.3", features = [ "serde-float" ] }
validator = { version = "0.15", features = ["derive"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_qs = "0.8.2"
serde_json = "1.0.63"
json5 = "0.4.0"
ring = "0.16.20"
bcrypt = "0.10.0"
hex = "0.4.2"
jsonwebtoken = "7.2.0"
mobc-redis = "0.7.0"
mobc = "0.7.0"
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-rt = "2.1.0"
lazy_static = "1.4.0"
async-trait = "0.1.42"
futures = "0.3.13"
thiserror = "1.0.24"
anyhow = "1.0.38"
url = "2.2.1"
ed25519-dalek = "1.0.0"
attohttpc = { version = "0.18", default-features = false, features = ["compress", "json", "tls-rustls"] }
ruc = "1.0"
base64 = "0.10.1"
mailgun_v3 = "0.13.0"
